[package]
name = "netatmo-rs"
version = "0.5.0"
edition = "2021"
authors = ["Lukas Pustina <lukas@pustina.net>", "Giorgio Bertolotti <giorgio@greenmod.it>"]
description = "Simple library to talk to Netatmo's API"
repository = "https://github.com/Green-Mod/netatmo-rs"
readme = "README.md"
license = "MIT"
keywords = ["netatmo", "api"]
categories = ["api-bindings"]

[dependencies]
log = "0"
thiserror = "1"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0" }
